lolspeak.BNF
<lolspeak> 	    ::=	<noun_phrase> <adverb> <verb> <noun_phrase>
<noun_phrase>	::=	<article> <adjective> <noun>
<adverb>	 	::=	accidently  |  quickly  | secretly
<verb>	 	    ::=	lovez  |  hatez  | ates
<noun>	 	    ::=	dawg  |  kat  |  rat
<article>	    ::=	a  | teh
<adjective>     ::= happy | mean | fat | hungry
